# bitcoin-ops

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
tests/: __init__.py  test_main.py
